Adding the adjustments to tempo

--- a/main_test.html
+++ b/main_test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Synthesizer</title>
     <link rel="stylesheet" href="./static/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 id="header">the synth website</h1>
@@ -111,6 +112,11 @@
         menuScenesSelector(scene);
         dayNight(scene, 'on'); // Set to day time by default
 
+        const tempoOptions = [90, 120, 130, 140];
+        let currentTempoIndex = 1; // 1 fo 120 index
+
+        Tone.Transport.bpm.value = tempoOptions[currentTempoIndex];
+
         let synthObj;
         const buttons = [];
         const lights = [];
@@ -139,6 +145,12 @@
             if (child.isMesh && child.name === 'synth-button') {
                 child.userData.isSynthButton = true;
             }
+            if (child.isMesh && child.name === 'tempo-up') {
+            child.userData.isTempoUpButton = true;
+            }
+            if (child.isMesh && child.name === 'tempo-down') {
+            child.userData.isTempoDownButton = true;
+            }
         });
         console.log('Buttons:', buttons);
         console.log('Lights:', lights);
@@ -151,6 +163,12 @@
             return notes[index - 1] || 'C4';
         }
 
+        function updateTempo() {
+            const newTempo = tempoOptions[currentTempoIndex];
+            Tone.Transport.bpm.value = newTempo;
+            updateText(`${newTempo} bpm`, font, 'tempo');
+        }
+        
         let noteSequence = Array(8).fill(false);
         let isPlaying = false;
         let timeouts = [];
@@ -189,10 +207,26 @@
                         startSequence();
                     } else {
                         stopSequence();
+                    } 
+                } else if (intersectedObject.userData.isTempoUpButton) {
+                    if (currentTempoIndex < tempoOptions.length - 1) {
+                        currentTempoIndex++;
+                        updateTempo();
+                    }
+                } else if (intersectedObject.userData.isTempoDownButton) {
+                    if (currentTempoIndex > 0) {
+                        currentTempoIndex--;
+                        updateTempo();
                     }
                 }
             }
         });
+
+        function updateTempo() {
+            const newTempo = tempoOptions[currentTempoIndex];
+            Tone.Transport.bpm.value = newTempo;
+            updateText(`${newTempo} bpm`, font, 'tempo');
+        }
 
         function startSequence() {
             // Clear any existing timeouts
@@ -217,7 +251,6 @@
                 }
             });
 
-            // Stop all playing notes
             synth.releaseAll();
         }
 
@@ -226,9 +259,10 @@
 
             console.log('Playing sequence');
             let now = Tone.now();
+            const stepDuration = 60 / Tone.Transport.bpm.value;
 
             noteSequence.forEach((isActive, index) => {
-                const time = now + index * 0.5;
+                const time = now + index * stepDuration;
                 const buttonIndex = index;
 
                 timeouts.push(setTimeout(() => {
@@ -245,7 +279,7 @@
                     if (light) {
                         light.material.color.set(0x000000);
                     }
-                }, (time - now + 0.3) * 1000));
+            }, (time - now + 0.3) * 1000));
 
                 if (isActive) {
                     const note = getNoteFromIndex(buttonIndex + 1);
@@ -253,7 +287,7 @@
                 }
             });
 
-            timeouts.push(setTimeout(() => playSequence(), noteSequence.length * 0.5 * 1000));
+            timeouts.push(setTimeout(() => playSequence(), noteSequence.length * stepDuration * 1000));
         }
 
         // Load the font
