--- a/main_test.html
+++ b/main_test.html
@@ -3,32 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Synthesizer</title>
+    <title>the synth website</title>
     <link rel="stylesheet" href="./static/styles.css">
+    <link rel="icon" href="./static/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="header">the synth website</h1>
-    <div id="menu">
-        <button id="menuButton" class="dropdown"><span>menu</span></button>
-        <div id="menuItems" class="dropdownContent">
-            <button class="menuItem dropdown">scenes</button>
-            <div id="sceneToggles" class="dropdownContent">
-                <button class="toggleButton" id="dayNightToggle">Day/Night</button>
-                <button class="toggleButton" id="roomToggle">room</button>
-                <button class="toggleButton" id="rainToggle">rain</button>
-                <button class="toggleButton" id="snowToggle">snow</button>
-                <button class="toggleButton" id="starToggle">stars</button>
-                <button class="toggleButton" id="spotlightToggle">spotlight</button>
-            </div>
-            <button class="menuItem dropdown">sequences</button>
-            <div id="sequenceToggles" class="dropdownContent">
-                <button class="toggleButton" id="rainToggle">fast</button>
-                <button class="toggleButton" id="snowToggle">super chill</button>
-                <button class="toggleButton" id="spotlightToggle">space vibes</button>
+    <!-- Loading Screen -->
+    <div id="loading-screen">
+        <h1 id="logo">the synth website</h1>
+        <h3 id="loading-text">0%</h3>
+    </div>
+
+    <div id="main-content" style="display: none;">
+        <h1 id="header">the synth website</h1>
+        <div id="menu">
+            <button id="menuButton" class="dropdown"><span>menu</span></button>
+            <div id="menuItems" class="dropdownContent">
+                <button class="menuItem dropdown">scenes</button>
+                <div id="sceneToggles" class="dropdownContent">
+                    <button class="toggleButton" id="dayNightToggle">Day/Night</button>
+                    <button class="toggleButton" id="roomToggle">room</button>
+                    <button class="toggleButton" id="rainToggle">rain</button>
+                    <button class="toggleButton" id="snowToggle">snow</button>
+                    <button class="toggleButton" id="starToggle">stars</button>
+                    <button class="toggleButton" id="spotlightToggle">spotlight</button>
+                </div>
+                <button class="menuItem dropdown">sequences</button>
+                <div id="sequenceToggles" class="dropdownContent">
+                    <button class="toggleButton" id="rainToggle">fast</button>
+                    <button class="toggleButton" id="snowToggle">super chill</button>
+                    <button class="toggleButton" id="spotlightToggle">space vibes</button>
+                </div>
             </div>
         </div>
-    </div>
     <script type="module" src="./static/scripts/menu.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
@@ -41,6 +49,30 @@
         import { dayNight } from './static/scripts/dayandnight.js';
         import { menuScenesSelector } from './static/scripts/menu.js';
         import { boundaries } from './static/scripts/room.js';
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const loadingText = document.getElementById('loading-text');
+            const loadingScreen = document.getElementById('loading-screen');
+            const mainContent = document.getElementById('main-content');
+
+            let progress = 0;
+            const interval = setInterval(function() {
+            progress += 1;
+            if (progress > 100) progress = 100;
+
+            loadingText.textContent = Math.round(progress) + '%';
+
+            if (progress === 100) {
+                clearInterval(interval);
+                setTimeout(function() {
+                    loadingScreen.style.display = 'none';
+                    mainContent.style.display = 'block';
+                }, 500);
+            }
+        }, 20);
+    });
+
+
 
         // Variables to use when updating screen
         let font; // used to hold the font out of the loader scope
@@ -158,6 +190,8 @@
         }, undefined, function (error) {
             console.error(error);
         });
+
+        
 
         const notes = ['C4', 'D4', 'E4', 'F4', 'G4', 'A4', 'B4', 'C5'];
         function getNoteFromIndex(index) {
