--- a/main_test_cabin.html
+++ b/main_test_cabin.html
@@ -123,7 +123,7 @@
 
         // Load the GLTF model
         const loader = new THREE.GLTFLoader();
-        loader.load('./static/assets/cabin.glb', function (gltf) {
+        loader.load('./static/assets/small_cabin.glb', function (gltf) {
 
             // Position the model
             const position = { x: 0, y: -2.27, z: 1.3 }; // x = left/right y = -up/+down z = +front/-back
