--- a/main_test_cabin.html
+++ b/main_test_cabin.html
@@ -32,15 +32,19 @@
     <script type="module" src="./static/scripts/menu.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/loaders/FontLoader.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/geometries/TextGeometry.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/loaders/FontLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/geometries/TextGeometry.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.35/Tone.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+
+    <!-- New to this file -->
+    <script src="https://threejs.org/examples/js/libs/draco/draco_decoder.js"></script>
+    <script src="https://threejs.org/examples/js/loaders/DRACOLoader.js"></script>
+
     <script type="module">
         import { dayNight } from './static/scripts/dayandnight.js';
         import { menuScenesSelector } from './static/scripts/menu.js';
-        import { boundaries } from './static/scripts/room.js';
 
         // Variables to use when updating screen
         let font; // used to hold the font out of the loader scope
@@ -123,6 +127,10 @@
 
         // Load the GLTF model
         const loader = new THREE.GLTFLoader();
+        // Initialize the DRACOLoader
+        const dracoLoader = new THREE.DRACOLoader();
+        dracoLoader.setDecoderPath('https://threejs.org/examples/js/libs/draco/'); // Path to Draco decoder
+        loader.setDRACOLoader(dracoLoader);
         loader.load('./static/assets/small_cabin.glb', function (gltf) {
 
             // Position the model
