--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the synth website</title>
+    <title>3D Synthesizer</title>
     <link rel="stylesheet" href="./static/styles.css">
-    <link rel="icon" href="./static/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Loading Screen -->
     <div id="loading-screen">
@@ -23,11 +24,9 @@
                 <button class="menuItem dropdown">scenes</button>
                 <div id="sceneToggles" class="dropdownContent">
                     <button class="toggleButton" id="dayNightToggle">Day/Night</button>
-                    <button class="toggleButton" id="roomToggle">room</button>
                     <button class="toggleButton" id="rainToggle">rain</button>
                     <button class="toggleButton" id="snowToggle">snow</button>
                     <button class="toggleButton" id="starToggle">stars</button>
-                    <button class="toggleButton" id="spotlightToggle">spotlight</button>
                 </div>
                 <button class="menuItem dropdown">sequences</button>
                 <div id="sequenceToggles" class="dropdownContent">
@@ -37,42 +36,45 @@
                 </div>
             </div>
         </div>
+    </div>
     <script type="module" src="./static/scripts/menu.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/loaders/FontLoader.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/geometries/TextGeometry.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/loaders/FontLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/geometries/TextGeometry.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.35/Tone.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+
+    <!-- New to this file -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/libs/draco/draco_decoder.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/DRACOLoader.js"></script>
+
     <script type="module">
         import { dayNight } from './static/scripts/dayandnight.js';
         import { menuScenesSelector } from './static/scripts/menu.js';
-        import { boundaries } from './static/scripts/room.js';
 
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             const loadingText = document.getElementById('loading-text');
             const loadingScreen = document.getElementById('loading-screen');
             const mainContent = document.getElementById('main-content');
 
             let progress = 0;
-            const interval = setInterval(function() {
-            progress += 1;
-            if (progress > 100) progress = 100;
+            const interval = setInterval(function () {
+                progress += 1;
+                if (progress > 100) progress = 100;
 
-            loadingText.textContent = Math.round(progress) + '%';
+                loadingText.textContent = Math.round(progress) + '%';
 
-            if (progress === 100) {
-                clearInterval(interval);
-                setTimeout(function() {
-                    loadingScreen.style.display = 'none';
-                    mainContent.style.display = 'block';
-                }, 500);
-            }
-        }, 20);
-    });
-
-
+                if (progress === 100) {
+                    clearInterval(interval);
+                    setTimeout(function () {
+                        loadingScreen.style.display = 'none';
+                        mainContent.style.display = 'block';
+                    }, 500);
+                }
+            }, 400);
+        });
 
         // Variables to use when updating screen
         let font; // used to hold the font out of the loader scope
@@ -111,7 +113,6 @@
         function switchSynth() {
             currentSynthIndex = (currentSynthIndex + 1) % synths.length;
             synth = synths[currentSynthIndex];
-            console.log(`Switched to synth: ${synths[currentSynthIndex]}`);
         }
 
         // effects
@@ -155,43 +156,63 @@
 
         // Load the GLTF model
         const loader = new THREE.GLTFLoader();
-        loader.load('./static/assets/synth.glb', function (gltf) {
-            scene.add(gltf.scene);
-            console.log(gltf);
-            synthObj = gltf;
+        // Initialize the DRACOLoader
+        const dracoLoader = new THREE.DRACOLoader();
+        dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/'); // Path to Draco decoder
+        loader.setDRACOLoader(dracoLoader);
+        loader.load('./static/assets/small_cabin_compressed.glb', function (gltf) {
 
-        // Traverse the GLTF scene to find the buttons and lights
-        gltf.scene.traverse((child) => {
-            if (child.isMesh && child.name.startsWith('button-')) {
-                const index = parseInt(child.name.split('-')[1], 10);
-                child.userData.note = getNoteFromIndex(index);
-                buttons[index] = child;
-            } else if (child.isMesh && child.name.startsWith('light-')) {
-                const index = parseInt(child.name.split('-')[1], 10);
-                lights[index] = child;
-            } else if (child.isMesh && child.name === 'play-button') {
-                child.userData.isPlayButton = true;
-            } else if (child.isMesh && child.name === 'synth-button') {
-                child.userData.isSynthButton = true;
-            } else if (child.isMesh && child.name === 'tempo-up') {
-            child.userData.isTempoUpButton = true;
-            } else if (child.isMesh && child.name === 'tempo-down') {
-            child.userData.isTempoDownButton = true;
-            } else if (child.isMesh && child.name === 'volume-up') {
-                child.userData.isVolumeUpButton = true;
-            } else if (child.isMesh && child.name === 'volume-down') {
-                child.userData.isVolumeDownButton = true;
-            } else if (child.isMesh && child.name === 'clear-button') {
-                child.userData.isClearButton = true;
-            }
-        });
-        console.log('Buttons:', buttons);
-        console.log('Lights:', lights);
+            // Position the model
+            const position = { x: 0, y: -2.27, z: 1.3 }; // x = left/right y = -up/+down z = +front/-back
+            gltf.scene.position.set(position.x, position.y, position.z);
+
+            // Rotate the model counterclockwise 90 degrees around the y-axis
+            gltf.scene.rotation.y = Math.PI / 2;
+
+            // Add the scaled and positioned model to the scene
+            scene.add(gltf.scene);
+
+            console.log('Cabin Loaded');
         }, undefined, function (error) {
             console.error(error);
         });
+        loader.load('./static/assets/synth_compressed.glb', function (gltf) {
+            // Position the model
+            const position = { x: 0, y: 0, z: 0 };
+            const scale = .2; // Change this value to scale the model
+            gltf.scene.scale.set(scale, scale, scale);
+            gltf.scene.position.set(position.x, position.y, position.z);
+            scene.add(gltf.scene);
+            synthObj = gltf;
 
-        
+            // Traverse the GLTF scene to find the buttons and lights
+            gltf.scene.traverse((child) => {
+                if (child.isMesh && child.name.startsWith('button-')) {
+                    const index = parseInt(child.name.split('-')[1], 10);
+                    child.userData.note = getNoteFromIndex(index);
+                    buttons[index] = child;
+                } else if (child.isMesh && child.name.startsWith('light-')) {
+                    const index = parseInt(child.name.split('-')[1], 10);
+                    lights[index] = child;
+                } else if (child.isMesh && child.name === 'play-button') {
+                    child.userData.isPlayButton = true;
+                } else if (child.isMesh && child.name === 'synth-button') {
+                    child.userData.isSynthButton = true;
+                } else if (child.isMesh && child.name === 'tempo-up') {
+                    child.userData.isTempoUpButton = true;
+                } else if (child.isMesh && child.name === 'tempo-down') {
+                    child.userData.isTempoDownButton = true;
+                } else if (child.isMesh && child.name === 'volume-up') {
+                    child.userData.isVolumeUpButton = true;
+                } else if (child.isMesh && child.name === 'volume-down') {
+                    child.userData.isVolumeDownButton = true;
+                } else if (child.isMesh && child.name === 'clear-button') {
+                    child.userData.isClearButton = true;
+                }
+            });
+        }, undefined, function (error) {
+            console.error(error);
+        });
 
         const notes = ['C4', 'D4', 'E4', 'F4', 'G4', 'A4', 'B4', 'C5'];
         function getNoteFromIndex(index) {
@@ -225,7 +246,7 @@
         let isPlaying = false;
         let timeouts = [];
 
-        document.addEventListener('click', function(event) {
+        document.addEventListener('click', function (event) {
             mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
             mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
 
@@ -251,9 +272,7 @@
                         }
                     }
                     updateText(currentNotes, font, 'sequence');
-                    console.log(`Note toggled: ${intersectedObject.userData.note}, Index: ${index}, Active: ${noteSequence[index]}`);
                 } else if (intersectedObject.userData.isPlayButton) {
-                    console.log('Note sequence:', noteSequence);
                     if (!isPlaying) {
                         startSequence();
                     } else {
@@ -274,7 +293,6 @@
                 } else if (intersectedObject.userData.isVolumeDownButton) {
                     adjustVolume('down');
                 } else if (intersectedObject.userData.isClearButton) {
-                    console.log('clearing note array')
                     noteSequence = Array(8).fill(false);
                     stopSequence();
                     clearButtonColor()
@@ -310,7 +328,6 @@
         function playSequence() {
             if (!isPlaying) return;
 
-            console.log('Playing sequence');
             let now = Tone.now();
             const stepDuration = 60 / Tone.Transport.bpm.value;
 
@@ -332,7 +349,7 @@
                     if (light) {
                         light.material.color.set(0x000000);
                     }
-            }, (time - now + 0.3) * 1000));
+                }, (time - now + 0.3) * 1000));
 
                 if (isActive) {
                     const note = getNoteFromIndex(buttonIndex + 1);
@@ -369,7 +386,7 @@
             const rotation = -(Math.PI / 2);
             const textMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
 
-            if (textToUpdate ==='tempo' || textToUpdate === 'all') {
+            if (textToUpdate === 'tempo' || textToUpdate === 'all') {
                 scene.remove(tempoText);
                 tempoText = new THREE.Mesh(textGeometry, textMaterial);
                 tempoText.rotation.x = rotation;
@@ -411,4 +428,5 @@
         });
     </script>
 </body>
+
 </html>
