--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <!-- Loading Screen -->
+    <!-- style="height: 100vh" -->
     <div id="loading-screen">
-        <h1 id="logo">the synth website</h1>
         <h3 id="loading-text">0%</h3>
     </div>
 
-    <div id="main-content" style="display: none;">
+    <div id="main-content" style="display: none">
         <h1 id="header">the synth website</h1>
         <div id="menu">
             <button id="menuButton" class="dropdown"><span>menu</span></button>
@@ -53,7 +53,7 @@
     <script type="module">
         import { dayNight } from './static/scripts/dayandnight.js';
         import { menuScenesSelector } from './static/scripts/menu.js';
-
+    // Loader logic
         document.addEventListener('DOMContentLoaded', function () {
             const loadingText = document.getElementById('loading-text');
             const loadingScreen = document.getElementById('loading-screen');
@@ -75,13 +75,7 @@
                 }
             }, 400);
         });
-
-        // Variables to use when updating screen
-        let font; // used to hold the font out of the loader scope
-        let tempoText;
-        let volumeText;
-        let sequenceText;
-
+    // Scene setup
         // Set up scene, camera, and renderer
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -98,6 +92,76 @@
         const mouse = new THREE.Vector2();
         renderer.setClearColor(new THREE.Color('skyblue'));
 
+    // Load Models
+        const loader = new THREE.GLTFLoader();
+        // Initialize the DRACOLoader
+        const dracoLoader = new THREE.DRACOLoader();
+        dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/'); // Path to Draco decoder
+        loader.setDRACOLoader(dracoLoader);
+        loader.load('./static/assets/small_cabin_compressed.glb', function (gltf) {
+
+            // Position the model
+            const position = { x: 0, y: -2.27, z: 1.3 }; // x = left/right y = -up/+down z = +front/-back
+            gltf.scene.position.set(position.x, position.y, position.z);
+
+            // Rotate the model counterclockwise 90 degrees around the y-axis
+            gltf.scene.rotation.y = Math.PI / 2;
+
+            // Add the scaled and positioned model to the scene
+            scene.add(gltf.scene);
+
+            console.log('Cabin Loaded');
+        }, undefined, function (error) {
+            console.error(error);
+        });
+
+
+        loader.load('./static/assets/synth_compressed.glb', function (gltf) {
+            // Position the model
+            const position = { x: 0, y: 0, z: 0 };
+            const scale = .2; // Change this value to scale the model
+            gltf.scene.scale.set(scale, scale, scale);
+            gltf.scene.position.set(position.x, position.y, position.z);
+            scene.add(gltf.scene);
+            synthObj = gltf;
+
+            // Traverse the GLTF scene to find the buttons and lights
+            gltf.scene.traverse((child) => {
+                if (child.isMesh && child.name.startsWith('button-')) {
+                    const index = parseInt(child.name.split('-')[1], 10);
+                    child.userData.note = getNoteFromIndex(index);
+                    buttons[index] = child;
+                } else if (child.isMesh && child.name.startsWith('light-')) {
+                    const index = parseInt(child.name.split('-')[1], 10);
+                    lights[index] = child;
+                } else if (child.isMesh && child.name === 'play-button') {
+                    child.userData.isPlayButton = true;
+                } else if (child.isMesh && child.name === 'synth-button') {
+                    child.userData.isSynthButton = true;
+                } else if (child.isMesh && child.name === 'tempo-up') {
+                    child.userData.isTempoUpButton = true;
+                } else if (child.isMesh && child.name === 'tempo-down') {
+                    child.userData.isTempoDownButton = true;
+                } else if (child.isMesh && child.name === 'volume-up') {
+                    child.userData.isVolumeUpButton = true;
+                } else if (child.isMesh && child.name === 'volume-down') {
+                    child.userData.isVolumeDownButton = true;
+                } else if (child.isMesh && child.name === 'clear-button') {
+                    child.userData.isClearButton = true;
+                }
+            });
+        }, undefined, function (error) {
+            console.error(error);
+        });
+
+        // Variables to use when updating screen
+        let font; // used to hold the font out of the loader scope
+        let tempoText;
+        let volumeText;
+        let sequenceText;
+        let synthText;
+
+    // Tone setup
         const synths = [
             new Tone.DuoSynth().toDestination(),
             new Tone.Synth().toDestination(),
@@ -113,6 +177,7 @@
         function switchSynth() {
             currentSynthIndex = (currentSynthIndex + 1) % synths.length;
             synth = synths[currentSynthIndex];
+            updateText(`${synth.name}`, font, 'synth');
         }
 
         // effects
@@ -154,66 +219,6 @@
         const buttons = [];
         const lights = [];
 
-        // Load the GLTF model
-        const loader = new THREE.GLTFLoader();
-        // Initialize the DRACOLoader
-        const dracoLoader = new THREE.DRACOLoader();
-        dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/'); // Path to Draco decoder
-        loader.setDRACOLoader(dracoLoader);
-        loader.load('./static/assets/small_cabin_compressed.glb', function (gltf) {
-
-            // Position the model
-            const position = { x: 0, y: -2.27, z: 1.3 }; // x = left/right y = -up/+down z = +front/-back
-            gltf.scene.position.set(position.x, position.y, position.z);
-
-            // Rotate the model counterclockwise 90 degrees around the y-axis
-            gltf.scene.rotation.y = Math.PI / 2;
-
-            // Add the scaled and positioned model to the scene
-            scene.add(gltf.scene);
-
-            console.log('Cabin Loaded');
-        }, undefined, function (error) {
-            console.error(error);
-        });
-        loader.load('./static/assets/synth_compressed.glb', function (gltf) {
-            // Position the model
-            const position = { x: 0, y: 0, z: 0 };
-            const scale = .2; // Change this value to scale the model
-            gltf.scene.scale.set(scale, scale, scale);
-            gltf.scene.position.set(position.x, position.y, position.z);
-            scene.add(gltf.scene);
-            synthObj = gltf;
-
-            // Traverse the GLTF scene to find the buttons and lights
-            gltf.scene.traverse((child) => {
-                if (child.isMesh && child.name.startsWith('button-')) {
-                    const index = parseInt(child.name.split('-')[1], 10);
-                    child.userData.note = getNoteFromIndex(index);
-                    buttons[index] = child;
-                } else if (child.isMesh && child.name.startsWith('light-')) {
-                    const index = parseInt(child.name.split('-')[1], 10);
-                    lights[index] = child;
-                } else if (child.isMesh && child.name === 'play-button') {
-                    child.userData.isPlayButton = true;
-                } else if (child.isMesh && child.name === 'synth-button') {
-                    child.userData.isSynthButton = true;
-                } else if (child.isMesh && child.name === 'tempo-up') {
-                    child.userData.isTempoUpButton = true;
-                } else if (child.isMesh && child.name === 'tempo-down') {
-                    child.userData.isTempoDownButton = true;
-                } else if (child.isMesh && child.name === 'volume-up') {
-                    child.userData.isVolumeUpButton = true;
-                } else if (child.isMesh && child.name === 'volume-down') {
-                    child.userData.isVolumeDownButton = true;
-                } else if (child.isMesh && child.name === 'clear-button') {
-                    child.userData.isClearButton = true;
-                }
-            });
-        }, undefined, function (error) {
-            console.error(error);
-        });
-
         const notes = ['C4', 'D4', 'E4', 'F4', 'G4', 'A4', 'B4', 'C5'];
         function getNoteFromIndex(index) {
             return notes[index - 1] || 'C4';
@@ -224,15 +229,18 @@
             Tone.Transport.bpm.value = newTempo;
             updateText(`${newTempo} bpm`, font, 'tempo');
         }
-
+        let volume = 15;
         function adjustVolume(buttonClicked) {
             const amountToChange = 5;
-            if (buttonClicked === 'up') {
+            if (buttonClicked === 'up' && volume < 30) {
                 synth.volume.value += amountToChange;
-            } else if (buttonClicked == 'down') {
+                volume += amountToChange;
+            } else if (buttonClicked == 'down' && volume > 0) {
+                if (volume === 5) synth.mute;
                 synth.volume.value -= amountToChange;
+                volume -= amountToChange;
             }
-            updateText(`Vol: ${Math.ceil(synth.volume.value)}`, font, 'volume');
+            updateText(`Vol: ${volume}`, font, 'volume');
         }
 
         function clearButtonColor() {
@@ -241,7 +249,7 @@
             }
         }
 
-
+    // Logic for click events
         let noteSequence = Array(8).fill(false);
         let isPlaying = false;
         let timeouts = [];
@@ -359,7 +367,7 @@
 
             timeouts.push(setTimeout(() => playSequence(), noteSequence.length * stepDuration * 1000));
         }
-
+    // Dynamic screen for synth
         // Load the font
         const fontLoader = new THREE.FontLoader();
         fontLoader.load('./static/assets/Digital-7_Regular.json', function (fontLoaded) {
@@ -370,8 +378,9 @@
             }, 2000);
             setTimeout(() => {
                 updateText('120 bpm', font, 'tempo');
-                updateText(`Vol: ${synth.volume.value}`, font, 'volume');
+                updateText(`Vol: 15`, font, 'volume');
                 updateText('', font, 'sequence');
+                updateText('duoSynth', font, 'synth');
             }, 3000);
         });
 
@@ -382,7 +391,7 @@
                 height: 0.1, // z axis of letters
                 bevelEnabled: false
             });
-            const scale = .03;
+            const scale = .009;
             const rotation = -(Math.PI / 2);
             const textMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
 
@@ -391,7 +400,7 @@
                 tempoText = new THREE.Mesh(textGeometry, textMaterial);
                 tempoText.rotation.x = rotation;
                 tempoText.scale.set(scale, scale, scale);
-                tempoText.position.set(0.1, 0.215, -0.2); //position.set(left/right, in/out, up/down)
+                tempoText.position.set(0.01, 0.044, -0.03); //position.set(left/right, in/out, up/down)
                 scene.add(tempoText);
             }
             if (textToUpdate === 'volume' || textToUpdate === 'all') {
@@ -399,16 +408,24 @@
                 volumeText = new THREE.Mesh(textGeometry, textMaterial);
                 volumeText.rotation.x = rotation;
                 volumeText.scale.set(scale, scale, scale);
-                volumeText.position.set(0.4, 0.215, -0.2);
+                volumeText.position.set(0.08, 0.044, -0.03);
                 scene.add(volumeText);
             }
             if (textToUpdate === 'sequence' || textToUpdate === 'all') {
                 scene.remove(sequenceText);
                 sequenceText = new THREE.Mesh(textGeometry, textMaterial);
                 sequenceText.rotation.x = rotation;
-                sequenceText.scale.set(.04, .04, .04);
-                sequenceText.position.set(0.02, 0.215, -0.3);
+                sequenceText.scale.set(.0085, .0085, .0085);
+                sequenceText.position.set(0.005, 0.044, -0.05);
                 scene.add(sequenceText);
+            }
+            if (textToUpdate === 'synth' || textToUpdate === 'all') {
+                scene.remove(synthText);
+                synthText = new THREE.Mesh(textGeometry, textMaterial);
+                synthText.rotation.x = rotation;
+                synthText.scale.set(.0085, .0085, .0085);
+                synthText.position.set(0.04, 0.044, -0.07);
+                scene.add(synthText);
             }
         }
 
