--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Loading Screen -->
     <!-- style="height: 100vh" -->
     <div id="loading-screen">
+        <h1 id="logo">the synth website</h1>
         <h3 id="loading-text">0%</h3>
     </div>
 <!-- style="display: none" -->
@@ -43,7 +44,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/loaders/FontLoader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/geometries/TextGeometry.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.35/Tone.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 
     <!-- New to this file -->
@@ -53,7 +53,7 @@
     <script type="module">
         import { dayNight } from './static/scripts/dayandnight.js';
         import { menuScenesSelector } from './static/scripts/menu.js';
-        import drumPadCity from './static/scripts/drumpadcity.js';
+        import drumPadCity, { initializeDrumSequencer, handleDrumInteraction, startDrumSequence, stopDrumSequence } from './static/scripts/drumpadcity.js';
     // Loader logic
         document.addEventListener('DOMContentLoaded', function () {
             const loadingText = document.getElementById('loading-text');
@@ -124,6 +124,7 @@
         loader.load('./static/assets/synth_compressed.glb', function (gltf) {
             // Position the model
             const position = { x: 0, y: 0, z: 0 };
+            console.log('we got here')
             const scale = .2; // Change this value to scale the model
             gltf.scene.scale.set(scale, scale, scale);
             gltf.scene.position.set(position.x, position.y, position.z);
@@ -159,7 +160,7 @@
             console.error(error);
         });
 
-        drumPadCity(scene, loader);
+        drumPadCity(scene, loader, './static/assets/drumpadcity.glb');
 
 
         // Variables to use when updating screen
@@ -287,8 +288,11 @@
                 } else if (intersectedObject.userData.isPlayButton) {
                     if (!isPlaying) {
                         startSequence();
+                        startDrumSequence();
+                        console.log('we got here')
                     } else {
                         stopSequence();
+                        stopDrumSequence(); 
                     }
                 } else if (intersectedObject.userData.isTempoUpButton) {
                     if (currentTempoIndex < tempoOptions.length - 1) {
@@ -309,6 +313,8 @@
                     stopSequence();
                     clearButtonColor()
                     updateText('', font, 'sequence');
+                } else {
+                    handleDrumInteraction(intersectedObject);
                 }
             }
         });
