--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 
 <body>
     <!-- Loading Screen -->
-    <!-- style="height: 100vh" -->
-    <div id="loading-screen">
-        <h3 id="loading-text">0%</h3>
+    <div id="loading-screen" style="height: 100vh">
+        <p id="loading-text">0%</p>
     </div>
-<!-- style="display: none" -->
-    <div id="main-content" >
+    <div id="main-content" style="display: none">
         <h1 id="header">the synth website</h1>
         <div id="menu">
             <button id="menuButton" class="dropdown"><span>menu</span></button>
@@ -26,7 +24,6 @@
                     <button class="toggleButton" id="dayNightToggle">Day/Night</button>
                     <button class="toggleButton" id="rainToggle">rain</button>
                     <button class="toggleButton" id="snowToggle">snow</button>
-                    <button class="toggleButton" id="starToggle">stars</button>
                 </div>
                 <button class="menuItem dropdown">sequences</button>
                 <div id="sequenceToggles" class="dropdownContent">
@@ -74,7 +71,7 @@
                         mainContent.style.display = 'block';
                     }, 500);
                 }
-            }, 400);
+            }, 40);
         });
 
         document.addEventListener("touchstart", function () {
@@ -103,7 +100,7 @@
         const dracoLoader = new THREE.DRACOLoader();
         dracoLoader.setDecoderPath('https://www.gstatic.com/draco/v1/decoders/'); // Path to Draco decoder
         loader.setDRACOLoader(dracoLoader);
-        loader.load('./static/assets/small_cabin_compressed.glb', function (gltf) {
+        loader.load('./static/assets/small_cabin.glb', function (gltf) {
 
             // Position the model
             const position = { x: 0, y: -2.27, z: 1.3 }; // x = left/right y = -up/+down z = +front/-back
