transition to bootstrap tomorrow. Update to menu popup

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <button class="menuItem dropdown">sequences</button>
                 <div id="sequenceToggles" class="dropdownContent">
                     <button class="toggleButton" id="fast">fast</button>
-                    <button class="toggleButton" id="chill">super chill</button>
-                    <button class="toggleButton" id="space">space vibes</button>
+                    <button class="toggleButton" id="chill">chill</button>
+                    <button class="toggleButton" id="space">vibes</button>
                 </div>
             </div>
         </div>
